Changes in robustHD version 0.7.1

    + Unit tests are now run automatically with R CMD check.


Changes in robustHD version 0.7.0

    + Re-implemented plots and added functions setupCoefPlot(),
      setupCritPlot(), and setupDiagnosticPlot() to extract all
      the relevant information.

    + Removed deprecated functions.

    + Function partialOrder() for finding the order of the smallest or
      largest values of a vector is now exported.

    + Added NCI-60 cancer cell panel data.

    + Added coef(), fitted(), and residuals() methods for objects of class
      "perrySeqModel".

    + Updated broken links in documentation.



Changes in robustHD version 0.6.1

    + Internal C++ functions for testing are now properly registered.


Changes in robustHD version 0.6.0

    + Method for function weights() is now used to retrieve robustness weights
      from objects of class "sparseLTS" (with argument type = "robustness").

    + C++ functions are now properly registered.

    + The alternative back end for sparse least trimmed squares from package
      sparseLTSEigen is no longer supported and can no longer be used.



Changes in robustHD version 0.5.1

    + Explicitly calling C++ function std::abs() rather than abs() to avoid
      clang warning.

    + Correctly importing functions head() and tail() from package 'utils' and
      function devAskNewPage from package 'grDevices'.



Changes in robustHD version 0.5.0

    + Added functionality for (robust) groupwise least angle regression.

    + Added TopGear car data.

    + Diagnostic plots now allow to pass arguments to covMcd().

    + Removed PCA step from data cleaning RLARS to consolidate code.

    + Updated package dependencies.



Changes in robustHD version 0.4.0

    + sparseLTS() no longer uses subsampling algorithm in the special case of
      alpha = 1.

    + sparseLTS() now has argument 'normalize' to specify whether the predictor
      variables should be normalized.
